Changelog for Poi
=================


1.2.1 (unreleased)
------------------

- Made it possible to translate the email messages.  Fixes
  http://plone.org/products/poi/issues/209
  [maurits]


1.2 (2009-02-23)
----------------

- In the migration from old to new style responses, also migrate the
  attachments to the responses.  [maurits]

- Added default_methods for the area and issueType fields of an issue.
  If the vocabulary of the field has only one value, we select that
  one.  See http://plone.org/products/poi/issues/202 [maurits]

- Removed poi_email_* dtml pages from the skins directory, in favour
  of templates in events.py.
  Fixes http://plone.org/products/poi/issues/206 [maurits]

- Fixed 'Field missing error' from kss (only visible in the logs).
  [maurits]

- Fixed possible in rich text field widget by now giving the number of
  rows as an integer instead of a string.
  Fixes http://plone.org/products/poi/issues/203
  [maurits]

- Migrations: now doing intermediate transaction commits to give the
  migrations a chance to finish on big sites.  [maurits]

- Fixed UnicodeError in email sending.
  Fixes http://plone.org/products/poi/issues/198
  Thanks to Derek Broughton for the first version of this fix.
  [maurits]

- Added Portuguese translations by Nuno Cruz.  Thanks!  [maurits]

- After creating a response, first check if emails need to be sent
  before figuring out the text to send.  [maurits]

- In migrations guard against outdated catalog items that have no
  existing object associated with them anymore.  [maurits]

- End-of-lines and svn:ignores set all over the place.  [maurits]


1.2rc3 (2008-09-28)
-------------------

- Added profiles/default/metadata.xml: version 1.2.  [maurits]

- Do not show (part of) the Add response form when no responses can be
  added.  Show a discreet message instead.  [maurits]

- Migrate old style responses in PoiPscTrackers as well.  [maurits]

- Code cleanup with pyflakes and pep8.  Only syntactic changes, no